--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,38 @@
+* {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+    font-size: 62.5%;
+    
+}
 html {
-    /* margin: 0 200px; */
+
 }
 
-av {
+nav {
     width: 100%;
     height: 10vh;
+    padding: 5px;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
+    align-items: center;
+    /* background-color: yellow; */
 }
 nav ul {
+    /* background-color: red; */
+
     margin: 0;
     list-style: none;
     display: flex;
-    width: 100%;
+    /* width: 80%; */
     height: 100%;
     justify-content: center;
     align-items: center;
 }
 nav li {
+    font-size: 2.2rem;
+    letter-spacing: .1rem;
+    /* background-color: blue; */
     margin: 20px;
 }
 nav li a {
@@ -25,21 +40,73 @@ nav li a {
     font-weight: bold;
     text-decoration: none;
 }
+main {
+    width: 100%;
+    height: 100%;
+    padding: 15rem;
+}
+.burger {
+    width: 30px;
+    height: 30px;
+    background-color: white;
+
+}
+.line {
+    width: 100%;
+    height: 5px;
+    background-color: black;
+    border-radius: 4px;
+}
+#heading {
+    font-family: 'Montserrat', sans-serif;
+}
+.main-img {
+    width: 700px;
+    height: 350px;
+}
 
 .container {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
 }
 
 .step {
     width: 100%;
     justify-content: left;
 }
-
+h1 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 3.2rem;
+    margin: 2.5rem;
+}
+h2 {
+	font-size: 2.4rem;
+}
+h3 {
+	font-size: 1.872rem;
+}
+h4 {
+	font-size: 1.6rem;
+}
+h5 {
+	font-size: 1.328rem;
+}
+h6 {
+	font-size: 1.072rem;
+}
 footer {
     background-color: slategray;
     width: 100%;
     height: 20vh;
 }
+
+p {
+    font-size: 1.6rem;
+    font-family: 'Poppins', sans-serif;
+    letter-spacing: .02rem;
+    
+
+}
+
