--- a/css/style.css
+++ b/css/style.css
@@ -41,27 +41,65 @@ nav li a {
     text-decoration: none;
 }
 main {
-    width: 100%;
-    height: 100%;
-    padding: 15rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    width: 100vw;
+    height: fit-content;
+    padding: 10rem;
+    background-color: orchid;
 }
-.burger {
+.left-main {
+    background-color: palegreen;
+    width: 70%;
+    padding: .5rem;
+}
+.right-main {
+    width: 20%;
+    min-height:100vh;
+    background-color: aqua;
+    padding: .5rem;
+}
+.menu-btn {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 30px;
     height: 30px;
-    background-color: white;
+    background-color: blueviolet;
+    cursor: pointer;
 
 }
+.menu-btn.active .line.two {
+    transform: translateX(-50px);
+}
+.menu-btn.active .line.one {
+    transform: rotate(45deg) translateX(35px, -35px);
+}
 .line {
+    transition: ease-in-out .5s;
     width: 100%;
     height: 5px;
     background-color: black;
-    border-radius: 4px;
+    border-radius: 100px;
+    margin: 2px;
 }
-#heading {
+#top-title-img-container {
+    width: 100vw;
+    background-color: lightgoldenrodyellow;
+    padding-left: 10rem;
+}
+#top-title-img-container .container {    
+    padding-right: 10rem;
+}
+#title-txt {
+    margin: 0;
+    padding: .5rem;
     font-family: 'Montserrat', sans-serif;
 }
 .main-img {
-    width: 700px;
+    width: 70%;
     height: 350px;
 }
 
