--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ html {
 body {
     /* overflow: hidden; */
     overflow-x: hidden;
-    max-height: 100vw;
+    max-width: 100vw;
     background-color: var(--body-color);
 }
 nav {
@@ -113,9 +113,25 @@ main {
     min-height:100vh;
     background-color: var(--p-color);
     box-shadow: var(--shadow-color) 0px 0px 4px;
-    
-
     padding: .5rem;
+}
+.img-txt-container {
+    display: flex;
+    /* float: left; */
+}
+.img-txt-container p {
+    width:70%;
+    padding: 0px 4px;
+    
+}
+.default-img-container {
+    background-color: aqua;
+    width: 35%;
+    height: 270px;
+}
+.default-img-container img {
+    height: 100%;
+    width: 100%;
 }
 .menu-btn {
     display: flex;
@@ -192,8 +208,9 @@ main {
     width: 100%;
     justify-content: left;
 }
+
 h1 {
-    font-family: Arial, Helvetica, sans-serif;
+    /* font-family: Arial, Helvetica, sans-serif; */
     font-size: 4.2rem;
     margin: 2.5rem;
 }
@@ -212,6 +229,11 @@ h5 {
 h6 {
 	font-size: 1.072rem;
 }
+h2, h3, h4, h5, h6 {
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    color: rgba(0,0,0, .7);
+    margin: 20px 0px;
+}
 footer {
     background-color: slategray;
     width: 100%;
@@ -219,8 +241,10 @@ footer {
 }
 
 p {
-    font-size: 1.6rem;
-    font-family: 'Poppins', sans-serif;
+    font-size: 1.8rem;
+    font-family: 'Times New Roman', Times, serif;
+    color: rgb(20, 34, 34);
+    /* font-weight: lighter; */
     letter-spacing: .02rem;
     
 
@@ -261,9 +285,31 @@ p {
 
 @media screen and (max-width:1024px) {
    
+    .links-container-bottom {
+        /* padding: 2px; */
+        /* display: grid; */
+        /* grid-template-rows: 1fr 1fr 1fr; */
+        /* grid-gap: 10px; */
+        /* justify-content: flex-start; */
+        /* grid-template-columns: auto auto; */
+        width: 70%;
+        height: 100%;
+        /* background-color: black; */
+         
+     }
 }
 
 @media screen and (max-width:768px) {
+    main {
+         
+    flex-direction: column;
+    align-items: center;
+    padding: 0rem;
+    }
+    .right-main {
+        display: none;
+    }
+
     body {
         overflow-x: hidden;
     }
