--- a/css/style.css
+++ b/css/style.css
@@ -192,7 +192,7 @@ main {
     color: rgba(0,0,0, .6)
 }
 .main-img {
-    box-shadow: var(--shadow-color) 0px 0px 4px;
+    /* box-shadow: var(--shadow-color) 0px 0px 4px; */
     width: 100%;
     height: 400px;
 }
@@ -312,6 +312,7 @@ p {
 
     body {
         overflow-x: hidden;
+        max-width: 100vw;
     }
     .menu-btn {
         display: block;
