--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
     position: relative;
     /* background-color: yellow; */
 }
@@ -95,7 +95,7 @@ nav ul.active {
     background-color: var(---dropdown-color);
     box-shadow: var(--shadow-color) 0px 0px 4px;
     border-radius: 5px;
-    min-width: 100%;
+    min-width: fit-content;
     height: fit-content;
     position: absolute;
     left:0px;
@@ -104,7 +104,7 @@ nav ul.active {
     display: block;
     display: none;
     transform: translateY(-5px);
-    /* transition: all 2s ease-in; */
+    white-space: nowrap;
 
 }
 .guides-container:hover .rm-dd {
@@ -117,15 +117,14 @@ nav ul.active {
 .dd-link {
     font-family: 'Poppins', sans-serif;
     /* letter-spacing: 2px; */
-    font-size: 15px;
+    font-size: 14px;
     font-weight: 600;
     border-radius: 5px;
     display: block;
     text-decoration: none;
     color: var(--l-black);
-    padding: 1rem;
+    padding: 14px;
     /* width: 100%; */
-    /* width: fit-content; */
     height: 100%;
 }
 .rm-dd a:hover {
@@ -153,7 +152,7 @@ main {
     box-shadow: var(--shadow-color) 0px 0px 4px;
 
     width: 70%;
-    /* padding: 1.5rem; */
+    padding: 16px;
 }
 
 .right-main {
@@ -161,11 +160,11 @@ main {
     min-height:100vh;
     background-color: var(--body-color);
     box-shadow: var(--shadow-color) 0px 0px 4px;
-    /* padding: .5rem; */
+    padding: 16px;
+     
 }
 
 #related-articles {
-    /* padding-left: .5rem; */
 
 }
 
@@ -190,7 +189,8 @@ main {
     max-width: 100%;
 }
 .img-txt-container img {
-    margin-right: 30px;
+    margin-right: 16px;
+    /* margin-right: 16px; */
     /* line-height: 27px;  */
 
     /* padding: 0px; */
@@ -301,6 +301,7 @@ main {
 }
 
 #top-title-img-container {
+    margin: 20px 0px;
     width: 100vw;
     padding: 0 10rem;
 }
@@ -312,12 +313,12 @@ main {
 
 
 #title-txt {
-    margin: 0;
-    margin-bottom: 20px;
-    /* padding: .5rem; */
+    /* margin-bottom: 20px; */
     font-size: 3.0rem;
+    padding: 20px 0;
+
     /* font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; */
-    font-family: 'Open Sans', sans-serif;
+    font-family: sans-serif;
     color: rgba(0,0,0, .7)
 }
 
@@ -372,6 +373,8 @@ h2, h3, h4, h5, h6 {
 }
 
 footer {
+    background-color:rgb(70, 70, 70);
+
     background-color: slategray;
     width: 100%;
     height: 20vh;
@@ -393,7 +396,8 @@ p {
     align-items: flex-start;
     width: 100vw;
     height: fit-content;
-    /* padding: 10px 100px; */
+    /* padding: 16px; */
+    
 }
 
 .article-heading-bottom {
@@ -473,7 +477,7 @@ p {
     font-size: 1.2rem;
     width: 80%;
     height: 150px;
-    background-color: yellow;
+    background-color: cyan;
 }
 
 @media screen and (max-width:1024px) {
